2003-09-04  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am: Change AM_CPPFLAGS to avrdude_CPPFLAGS.
	Define avrdude_CFLAGS.
	* configure.ac: Set ENABLE_WARNINGS to "-Wall" if using gcc.

2003-09-02  Eric B. Weddington <eric@ecentral.com>

	* doc/avrdude.texi: Add note about privileges needed to load 
	the giveio driver for Windows.

2003-08-29  Brian S. Dean  <bsd@bsdhome.com>

	* avrdude.1:
	* main.c:
	Perform an auto erase before programming if the flash memory is
	anywhere specified to be written by any of the -U requests.

	To remain backward compatible with previous versions, disable this
	feature if any of the old-style memory specification operations are
	specified (-i, -o).

	Implement the -D option to explicitly disable the auto erase default.

	Deprecate the old-style memory specification options (-f, -i, -I, -m,
	and -o) in favor of the new -U option which allows one to operate on
	multiple memories on a single command line.

2003-08-28  Eric B. Weddington  <eric@ecentral.com>

	* avr910.c:
	* fileio.c:
	* main.c:
	* stk500.c:
	More code cleanup to remove warnings.

2003-08-27  Theodore A. Roth  <troth@openavr.org>

	* main.c (update_progress_no_tty): Properly terminate progress. Also
	fixes stk500 problem where number of bytes written is less than a page.

2003-08-27  Theodore A. Roth  <troth@openavr.org>

	* avrdude.spec.in: Fix broken rpmbuild on RedHat-9.

2003-08-25  Eric B. Weddington  <eric@ecentral.com>

	* fileio.c: 
	* main.c: 
	* ppiwin.c:
	* ser_posix.c:
	* stk500.c:
	Minor code cleanup to remove warnings.

2003-08-21  Brian S. Dean  <bsd@bsdhome.com>

	* avrdude.1:
	* main.c:

	Introduce a new option, -U, for performing memory operions.
	Its argument is a 4 field string (fields seperated by colons)
	which indicate what memory type to operate on, what operation
	to perform is (read, write, or verify), the filename to read
	from, write to, or verify against, and an optional file format